--- a/srtylesheets/479px.css
+++ b/srtylesheets/479px.css
@@ -53,6 +53,7 @@
       padding-left: 20px;
       padding-right: 20px;
       position: relative;
+      overflow: scroll;
     }
     .nav {
       flex-flow: row;
