--- a/srtylesheets/content.css
+++ b/srtylesheets/content.css
@@ -33,6 +33,9 @@ body{
 
 .box {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
   
 h1 {
@@ -207,11 +210,12 @@ display: flex;
 .places{
     flex-flow: column;
     width: 460px;
-    height: 100%;
+    height: calc(100vh + 1400px);
     display: none;
     position: absolute;
     top: 0;
     right: 0;
+
 }
 
 .events {
@@ -223,7 +227,49 @@ display: flex;
     top: 0;
     right: 0;
 }
+.places_images{
+    position: fixed;
+    bottom: 0;
+    display: none;
+    width: 100%;
+    
+}
 
+.places_text{
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-direction: column
+
+
+}
+
+.places_images_enter{
+    
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    bottom: 0;
+    width: 100%;
+    height: 30vh;
+    justify-content: center;
+    position: fixed;
+    transform-style: preserve-3d;
+    transform: rotateX(-1deg);
+    
+
+}
+
+.places_item{
+    position: absolute;
+    object-fit: cover;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: rotateX(-1deg);
+
+}
 
 
 .events_text{
@@ -236,10 +282,16 @@ display: flex;
     z-index: 1;
 }
 
+
+.video_box{
+    display: none;
+}
 .video_bg{
     position: absolute;
     z-index: -1;
     height: 100vh;
+    width: 100%;
+    object-fit: cover;
 }
 
 .item:nth-child(1){
