--- a/srtylesheets/content.css
+++ b/srtylesheets/content.css
@@ -17,7 +17,15 @@ body{
     background-size: cover;
 }
 
-
+.button{
+    padding-left: 24px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-right: 24px;
+    border-radius: 16px;
+    background-color: var(--TextFill);
+    backdrop-filter: blur(24px);
+}
 /* h1 {
     letter-spacing: -9.339px;
     font-size: 150px;
@@ -32,7 +40,7 @@ body{
 
 
 .box {
-    text-align: center;
+    text-align: left;
     display: flex;
     flex-direction: column;
     overflow: auto;
@@ -138,7 +146,7 @@ align-items: center;
 width: 100%;
 height: 100%;
 display: flex;
-background-color: #8b1d1d46;
+/* background-color: #8b1d1d46; */
 cursor: pointer;
 }
 
@@ -156,7 +164,7 @@ align-items: center;
 width: 100%;
 height: 100%;
 display: flex;
-background-color: #1aa26946;
+/* background-color: #1aa26946; */
 cursor: pointer;
 }
 
@@ -168,7 +176,7 @@ width: 100%;
 height: 100%;
 text-decoration: none;
 display: flex;
-background-color: #26c5e446;
+/* background-color: #26c5e446; */
 cursor: pointer;
 }
 
@@ -178,7 +186,7 @@ align-items: center;
 width: 100%;
 height: 100%;
 display: flex;
-background-color: #a6d71346;
+/* background-color: #a6d71346; */
 cursor: pointer;
 }
 
@@ -195,7 +203,570 @@ display: none;
 position: absolute;
 top: 0;
 right: 0;
+height: calc(100% + 4200px);
 }
+
+.book_text{
+    flex-flow: column;
+    width: 460px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.books_images_enter{
+    display: none;
+}
+
+.book_content{
+    width: 100vw;
+    height: calc(100vh + 800px );
+    top:0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    z-index: -1;
+    position: fixed;
+    overflow-x: auto;
+    transform-style: preserve-3d;
+    transform: rotateY(-1deg);
+    overflow: hidden;
+    
+}
+
+#book_container_01{
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center
+}
+
+#book_container_02{
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center
+}
+
+#book_container_03{
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center
+}
+
+#book_container_04{
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center
+}
+
+#book_container_05 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_06 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_07 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_08 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_09 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_10 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_11 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_12 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_13 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_14 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_15 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_16 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_17 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_18 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_19 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_20 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_21 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_22 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_23 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_24 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_25 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_26 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_27 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_28 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+#book_container_29 {
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+#book_01{
+    width: 44vw;
+    position: fixed;
+    top: 0;
+    height: auto;
+    object-fit: cover;
+
+}
+
+#book_02{
+    width: 43vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+
+
+}
+
+#book_03{
+    width: 42vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+
+}
+
+#book_04 {
+    width: 41vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_05 {
+    width: 40vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_06 {
+    width: 39vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_07 {
+    width: 38vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_08 {
+    width: 37vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_09 {
+    width: 36vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_10 {
+    width: 35vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_11 {
+    width: 34vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_12 {
+    width: 33vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_13 {
+    width: 32vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_14 {
+    width: 31vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_15 {
+    width: 30vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_16 {
+    width: 29vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_17 {
+    width: 28vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_18 {
+    width: 27vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_19 {
+    width: 26vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_20 {
+    width: 25vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_21 {
+    width: 24vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_22 {
+    width: 23vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_23 {
+    width: 22vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_24 {
+    width: 21vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_25 {
+    width: 20vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_26 {
+    width: 19vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_27 {
+    width: 18vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_28 {
+    width: 17vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+#book_29 {
+    width: 16vw;
+    height: auto;
+    position: fixed;
+    top: 0;
+    object-fit: cover;
+}
+
+
+
+
 
 .content {
 grid-column-gap: 20px;
@@ -218,15 +789,7 @@ display: flex;
 
 }
 
-.events {
-    flex-flow: column;
-    width: 100vw;
-    height: calc(100% + 4200px );
-    display: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
+
 .places_images{
     position: fixed;
     bottom: 0;
@@ -271,6 +834,16 @@ display: flex;
 
 }
 
+.events {
+    flex-flow: column;
+    width: 100vw;
+    height: calc(100% + 4200px );
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 
 .events_text{
     flex-flow: column;
@@ -281,24 +854,6 @@ display: flex;
     right: 0;
     z-index: 1;
 }
-
-
-.video_box{
-    display: none;
-}
-.video_bg{
-    position: absolute;
-    z-index: -1;
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-}
-
-.item:nth-child(1){
-    offset-anchor: 25% 75%;
-}
-
-
 
 .events_content{
     width: 100vw;
@@ -432,6 +987,23 @@ display: flex;
     height: 100vh;
     flex-direction: column
 }
+
+.video_box{
+    display: none;
+}
+.video_bg{
+    position: absolute;
+    z-index: -1;
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+}
+
+.item:nth-child(1){
+    offset-anchor: 25% 75%;
+}
+
+
 
 .event_item_01:hover{
     transform: rotate(15deg); /* Поворот на 15 градусов */
